# streamwave-backend

./: Cargo.toml  docker-compose.yml  schema.sql
src/: main.rs  provider.rs
src/auth/: callback.rs  login.rs  middleware.rs  mod.rs  models.rs  oauth_client.rs
src/models/: episodes.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  sessions.rs  shows.rs  users.rs  users_shows.rs
src/provider/: responses.rs  scraper.rs
src/provider/responses/: episode_response.rs  provider_links_response.rs  search_response.rs
src/routes/: api.rs  list.rs  mod.rs  shows.rs
