[package]
name = "streamwave"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version =  "0.7.3", features = ["default", "macros"]}
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = "1.28.2"
tracing = "0.1.40"
sea-orm = { version = "0.12", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono" ] }
oauth2 = "4.4.2"
reqwest = { version = "0.12.4", features = ["json"] }
shuttle-secrets = "0.42.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
axum-extra = { version = "0.9.2", features = ["cookie"] }
chrono = "0.4.34"
